# langflow-infra

./: .gitignore  APPDEPLOYMENT.md  LANGFLOW_SETUP.md  README.md  pyproject.toml
aws/: ecr-stack.cfn.yaml  platform-stack.cfn.yaml  rds-stack.cfn.yaml  vpc-stack.cfn.yaml
aws/apps/: fargate-stack.cfn.yaml
dummy-app/: Dockerfile  app.py
infra_tools/: __init__.py  dockerfile_generator.py  setup_deployment.py
